--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,10 @@
-.App {
-  text-align: center;
+.banner-main{
+  font-size: 50px;
+  font-family: 'montserrat';
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.banner-section{
+  padding: 10em  0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bgg-dark{
+  background-color: #000000;
 }
